# gtkks

./: CMakeLists-kindle.txt  CMakeLists.txt  DOCKER-BUILD.md  Dockerfile  Dockerfile-armhf  Dockerfile-real  KINDLE-SUMMARY.md  KINDLE.md  README-KINDLE-BUILD.md  README-KINDLE.md  README.md  build-and-install.sh  build-kindle-armhf-simple.sh  build-kindle-armhf.sh  build-kindle-docker.sh  build-kindle-real.sh  build-kindle-simple.sh  build-kindle.sh  build-with-docker.sh  build.sh  build_bundle.sh  build_gtk2.sh  config.json  create_chatview.sh  docker-compose.yml  install-kindle-simple.sh  install-on-kindle-armhf.sh  install-on-kindle.sh  kindle-install.sh  kindle-toolchain.cmake  validate-kindle-package.sh
build_gtk2/: CMakeCache.txt  Makefile  cmake_install.cmake  gtkks
include/: ApiManager.h  ChatView.h  Config.h  DeepseekApi.h  GeminiApi.h  HttpClient.h  LLMApi.h  MainWindow.h  ModelSelector.h  OllamaApi.h  OpenAIApi.h  OpenRouterApi.h  atkmmconfig.h  gdkmmconfig.h
kindle-build/: CMakeCache.txt  Makefile  cmake_install.cmake  gtkks-main.c  gtkks-main.cpp  kindle-install-armhf.sh  kindle-install.sh
kindle-build/gtkks/: README.md  config.xml  gtkks  menu.json
kindle-build/gtkks-kindle/: README.md  gtkks.sh
kindle-build/gtkks2/: README.md  gtkks  gtkks.sh
kindle-build/include/: ApiManager.h  KindleConfig.h  LLMApi.h  MainWindow.h  OpenRouterApi.h
kindle-build/src/: GeminiApi.cpp  LLMApi.cpp  OllamaApi.cpp  OpenRouterApi.cpp  main.cpp
resources/kindle/: convert-icon.sh
src/: ApiManager.cpp  ChatView.cpp  Config.cpp  DeepseekApi.cpp  GeminiApi.cpp  HttpClient.cpp  LLMApi.cpp  MainWindow.cpp  ModelSelector.cpp  OllamaApi.cpp  OpenAIApi.cpp  OpenRouterApi.cpp  main.cpp
test/: gtkks
